codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktrees_command_local.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 3091
expression: popup
---
› /work

  /worktree  start or continue a conversation in a new worktree
